Fixed issue with Quill Editor

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,10 @@
     },
     "include": [
         "src/main/webapp/app",
-        "src/test/javascript/"
+        "src/test/javascript/",
+        "node_modules/ngx-quill-editor/quillEditor.component.ts",
+        "node_modules/ngx-quill-editor/quillEditor.module.ts",
+        "node_modules/ngx-quill-editor/index.ts"
     ],
     "exclude": [
         "node_modules"
