Changed Keycloak to use Postgres and persist data on the local system

--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -1,5 +1,9 @@
 version: '2'
 services:
+    postgres:
+        extends:
+            file: postgresql.yml
+            service: postgres
     gateway-app:
         image: gateway
         environment:
