--- a/src/main/docker/app-dev.yml
+++ b/src/main/docker/app-dev.yml
@@ -1,5 +1,9 @@
 version: '2'
 services:
+    postgres:
+        extends:
+            file: postgresql.yml
+            service: postgres
     gateway-mongodb:
         extends:
             file: mongodb.yml
@@ -12,17 +16,17 @@ services:
         image: consul:1.3.0
         command: consul agent -dev -ui -client 0.0.0.0
         ports:
-            - 8300:8300
-            - 8500:8500
-            - 8600:8600
+        - 8300:8300
+        - 8500:8500
+        - 8600:8600
     consul-config-loader:
         image: jhipster/consul-config-loader:v0.3.0
         volumes:
-            - ./central-server-config:/config
+        - ./central-server-config:/config
         environment:
-            - INIT_SLEEP_SECONDS=5
-            - CONSUL_URL=consul
-            - CONSUL_PORT=8500
+        - INIT_SLEEP_SECONDS=5
+        - CONSUL_URL=consul
+        - CONSUL_PORT=8500
         # Uncomment to load configuration into Consul from a Git repository
         # as configured in central-server-config/git2consul.json
         # Also set SPRING_CLOUD_CONSUL_CONFIG_FORMAT=files on your apps
