--- a/src/main/docker/mongodb.yml
+++ b/src/main/docker/mongodb.yml
@@ -4,5 +4,5 @@ services:
         image: mongo:4.0.2
         ports:
             - "27017:27017"
-        # volumes:
-        #     - ~/volumes/jhipster/gateway/mongodb/:/data/db/
+        volumes:
+            - ~/volumes/dega/mongodb/:/data/db/
