Changed the keycloak export directory

--- a/src/main/docker/keycloak.yml
+++ b/src/main/docker/keycloak.yml
@@ -9,10 +9,10 @@ services:
         volumes:
         - ./realm-config:/opt/jboss/keycloak/realm-config
 
-        ## uncomment the following command if keycloak is run in the mode to export realm and users. real and users are exported to ~/keycloak directory
-        # command: ["-b", "0.0.0.0", "-Dkeycloak.migration.action=export", "-Dkeycloak.migration.provider=dir", "-Dkeycloak.migration.dir=/opt/jboss/keycloak/realm-config", "-Djboss.socket.binding.port-offset=1000"]
-        # volumes:
-        #- ~/keycloak:/opt/jboss/keycloak/realm-config
+        ## uncomment the following command if keycloak is run in the mode to export realm and users. real and users are exported to ~/volumes/dega/keycloak/realm-config directory
+        #command: ["-b", "0.0.0.0", "-Dkeycloak.migration.action=export", "-Dkeycloak.migration.provider=dir", "-Dkeycloak.migration.dir=/opt/jboss/keycloak/realm-config", "-Djboss.socket.binding.port-offset=1000"]
+        #volumes:
+        #- ~/volumes/dega/keycloak/realm-config:/opt/jboss/keycloak/realm-config
 
         environment:
             DB_VENDOR: POSTGRES
