Added port to postgres.yml to access postgres on localhost

--- a/src/main/docker/postgresql.yml
+++ b/src/main/docker/postgresql.yml
@@ -13,3 +13,5 @@ services:
             POSTGRES_DB: keycloak
             POSTGRES_USER: keycloak
             POSTGRES_PASSWORD: password
+        ports:
+        - "5432:5432"
