--- a/src/main/docker/keycloak.yml
+++ b/src/main/docker/keycloak.yml
@@ -5,14 +5,14 @@ services:
         image: jboss/keycloak:4.5.0.Final
 
         ## comment the following lines if keycloak is to run in the mode to export realm and users
-        command: ["-b", "0.0.0.0", "-Dkeycloak.migration.action=import", "-Dkeycloak.migration.provider=dir", "-Dkeycloak.migration.dir=/opt/jboss/keycloak/realm-config", "-Dkeycloak.migration.strategy=IGNORE_EXISTING", "-Djboss.socket.binding.port-offset=1000"]
-        volumes:
-        - ./realm-config:/opt/jboss/keycloak/realm-config
-
-        ## uncomment the following command if keycloak is run in the mode to export realm and users. real and users are exported to ~/volumes/dega/keycloak/realm-config directory
-        #command: ["-b", "0.0.0.0", "-Dkeycloak.migration.action=export", "-Dkeycloak.migration.provider=dir", "-Dkeycloak.migration.dir=/opt/jboss/keycloak/realm-config", "-Djboss.socket.binding.port-offset=1000"]
+        #command: ["-b", "0.0.0.0", "-Dkeycloak.migration.action=import", "-Dkeycloak.migration.provider=dir", "-Dkeycloak.migration.dir=/opt/jboss/keycloak/realm-config", "-Dkeycloak.migration.strategy=IGNORE_EXISTING", "-Djboss.socket.binding.port-offset=1000"]
         #volumes:
-        #- ~/volumes/dega/keycloak/realm-config:/opt/jboss/keycloak/realm-config
+        #- ./realm-config:/opt/jboss/keycloak/realm-config
+
+        ## uncomment the following command if keycloak is run in the mode to export realm and users. realm and users are exported to ~/volumes/dega/keycloak/realm-config directory
+        command: ["-b", "0.0.0.0", "-Dkeycloak.migration.action=export", "-Dkeycloak.migration.provider=dir", "-Dkeycloak.migration.dir=/opt/jboss/keycloak/realm-config", "-Djboss.socket.binding.port-offset=1000"]
+        volumes:
+        - ~/volumes/dega/keycloak/realm-config:/opt/jboss/keycloak/realm-config
 
         environment:
             DB_VENDOR: POSTGRES
