--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ dependencyManagement {
 defaultTasks 'bootRun'
 
 group = 'com.factly.dega'
-version = '0.0.1-SNAPSHOT'
+version = '0.2.1'
 
 description = ''
 
