Fixes 153 Enabled colored logging in console

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -57,7 +57,10 @@ spring:
             enabled: false
     thymeleaf:
         mode: HTML
-
+    output:
+        ansi:
+            enabled: ALWAYS
+            
 # ===================================================================
 # OpenID Connect Settings. Default settings are for Keycloak in Docker.
 # Start Keycloak using `docker-compose -f src/main/docker/keycloak.yml up`.
