Trying to add ability for Kibana over Elasticsearch

--- a/src/main/docker/app-dev.yml
+++ b/src/main/docker/app-dev.yml
@@ -35,3 +35,7 @@ services:
         extends:
             file: keycloak.yml
             service: keycloak
+#    kibana:
+#        extends:
+#            file: kibana.yml
+#            service: kibana
