--- a/src/main/docker/elasticsearch.yml
+++ b/src/main/docker/elasticsearch.yml
@@ -10,3 +10,4 @@ services:
         command: -Enetwork.host=0.0.0.0 -Ediscovery.type=single-node
         environment:
             - "ES_JAVA_OPTS=-Xms1024m -Xmx1024m"
+            - "xpack.security.enabled=false"
