--- a/src/main/docker/kibana.yml
+++ b/src/main/docker/kibana.yml
@@ -6,5 +6,6 @@ services:
         environment:
             SERVER_NAME: localhost
             ELASTICSEARCH_URL: http://gateway-elasticsearch:9200/
+            XPACK_SECURITY_ENABLED: "false"
         ports:
             - 5601:5601
