--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "ng-jhipster": "0.5.4",
     "ngx-cookie": "2.0.1",
     "ngx-infinite-scroll": "6.0.1",
-    "ngx-quill": "^4.0.0",
+    "ngx-quill-v2": "0.0.1",
     "ngx-webstorage": "2.0.1",
-    "quill": "^1.3.6",
+    "quill": "^2.0.0-dev.3",
     "reflect-metadata": "0.1.12",
     "rxjs": "6.3.3",
     "sockjs-client": "1.1.4",
