--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -60,7 +60,7 @@ spring:
     output:
         ansi:
             enabled: ALWAYS
-            
+
 # ===================================================================
 # OpenID Connect Settings. Default settings are for Keycloak in Docker.
 # Start Keycloak using `docker-compose -f src/main/docker/keycloak.yml up`.
@@ -85,14 +85,11 @@ security:
         client:
             access-token-uri: http://localhost:9080/auth/realms/dega/protocol/openid-connect/token
             user-authorization-uri: http://localhost:9080/auth/realms/dega/protocol/openid-connect/auth
-            #access-token-uri: http://35.225.135.28:80/auth/realms/jhipster/protocol/openid-connect/token
-            #user-authorization-uri: http://35.225.135.28:80/auth/realms/jhipster/protocol/openid-connect/auth
             client-id: web_app
             client-secret: web_app
             scope: openid profile email
         resource:
             user-info-uri: http://localhost:9080/auth/realms/dega/protocol/openid-connect/userinfo
-            #user-info-uri: http://35.225.135.28:80/auth/realms/jhipster/protocol/openid-connect/userinfo
 
 server:
     servlet:
@@ -103,7 +100,7 @@ server:
 # Properties to be exposed on the /info management endpoint
 info:
     # Comma separated list of profiles that will trigger the ribbon to show
-    display-ribbon-on-profiles: "dev"
+    display-ribbon-on-profiles: "dev, stag"
 
 # ===================================================================
 # JHipster specific properties
