--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "4.1.1",
     "bootstrap": "4.3.1",
     "core-js": "2.5.7",
+    "hammerjs": "^2.0.8",
     "moment": "2.22.2",
     "ng-jhipster": "0.5.4",
     "ngx-cookie": "2.0.1",
