--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ env:
     - SPRING_OUTPUT_ANSI_ENABLED=ALWAYS
     - SPRING_JPA_SHOW_SQL=false
 before_install:
-  - java -version
+  - source /opt/jdk_switcher/jdk_switcher
   - jdk_switcher use oraclejdk8
   - java -version
   - sudo /etc/init.d/mysql stop
