--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,7 @@
-# Prettier configuration
-
-printWidth: 140
-singleQuote: true
-tabWidth: 4
-useTabs: false
-
-# js and ts rules:
-arrowParens: avoid
-
-# jsx and tsx rules:
-jsxBracketSameLine: false
+{ 
+    "printWidth": 100,
+    "trailingComma": "all",
+    "tabWidth": 2, 
+    "semi": true, 
+    "singleQuote": true
+}
