--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{json,js,css,scss}": [
-      "prettier --write"
+    "*.js": [
+      "prettier --single-quote --write"
     ]
   },
   "scripts": {
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "husky": "^4.2.5",
-    "lint-staged": "^10.2.0"
+    "lint-staged": "^10.2.0",
+    "prettier": "2.0.5"
   }
 }
